# sovereign

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
agent-server/: .env.example  package-lock.json  package.json
agent-server/src/: index.ts  types.ts
sovereign/: __init__.py  cli.py  config.py
sovereign-backend/: pyproject.toml
sovereign-backend/app/: main.py
sovereign-frontend/: index.html  package.json
sovereign-frontend/src/: App.tsx  index.css
sovereign/agents/: __init__.py  analyst.py  coder.py  director.py  marketer.py  operator.py  outreach.py  researcher.py
sovereign/business/: __init__.py  analytics.py  content.py  finance.py  leads.py  revenue.py  strategy.py
sovereign/channels/: __init__.py  base.py  discord.py  inbound.py  slack.py  telegram.py  webhook.py
sovereign/core/: __init__.py  agent.py  daemon.py  executor.py  notifier.py  orchestrator.py  planner.py  reasoning.py  self_improve.py  skills.py  task_queue.py
sovereign/llm/: __init__.py  provider.py  router.py
sovereign/memory/: __init__.py  episodic.py  knowledge_graph.py  long_term.py  persistent.py  short_term.py  store.py
sovereign/safety/: __init__.py  approval.py  audit.py  guardrails.py
sovereign/scheduler/: __init__.py  scheduler.py
sovereign/tools/: __init__.py  api_client.py  base.py  browser.py  browser_auto.py  code_executor.py  crm.py  database.py  deploy_tool.py  design_engine.py  email_client.py  file_manager.py  invoice.py  lead_scraper.py  registry.py  shell.py  site_generator.py  twilio_tool.py  web_search.py  (+1 more)
src/: agent.ts
(+93 files in other folders)
