[tool.poetry]
name = "sovereign"
version = "0.1.0"
description = "Sovereign - Autonomous AI Agent Platform for Business Automation"
authors = ["Sovereign Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "sovereign"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
pydantic-settings = "^2.1"
httpx = "^0.27"
click = "^8.1"
rich = "^13.7"
chromadb = "^0.4"
jinja2 = "^3.1"
apscheduler = "^3.10"
aiofiles = "^23.2"
python-dotenv = "^1.0"
tiktoken = "^0.7"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.8"
pytest = "^8.0"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
sovereign = "sovereign.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
